syntax = "proto3";

package service.types.v1;

option go_package = "github.com/bnb-chain/greenfield-storage-provider/service/types/v1";

message Message {
  oneof inner {
    SecondSpRequest ssp_request = 1;
    SecondSpRefuse ssp_refuse = 2;
    SecondSpAck ssp_ack = 3;
    SecondSpManifest ssp_manifest = 4;
  }
}

message SecondSpRequest {
  int64 object_id = 1;
  int64 size = 2;
  int64 sp_index = 3;
}

message SecondSpRefuse {
  int64 object_id = 1;
  string reason = 2;
}

message SecondSpAck {
  int64 object_id = 1;
  string reason = 2;
}

message SecondSpManifest {
  string object_id = 1;
  string url = 2;
  string sign_content = 3;
}